// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkeletonShape default (no arguments) 1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  border-radius: 0;
  background-color: #f0f1f2;
  margin-bottom: 16px;
}

<div
  className="emotion-0 emotion-1"
/>
`;

exports[`SkeletonShape shape with supplied props 1`] = `
.emotion-0 {
  width: 100px;
  height: 100px;
  border-radius: 2px;
  background-color: #f0f1f2;
  margin-bottom: 16px;
}

<div
  className="emotion-0 emotion-1"
  height={100}
  width={100}
/>
`;
